Fix alignment of checkbox and secondary row

--- a/ui/src/app/machines/views/MachineList/NameColumn/NameColumn.scss
+++ b/ui/src/app/machines/views/MachineList/NameColumn/NameColumn.scss
@@ -1,5 +1,9 @@
 @import "../settings";
 
-.u-nudge--right {
+.u-nudge--checkbox {
   padding-left: $checkbox-offset;
+}
+
+.u-nudge--secondary-row {
+  padding-left: $box-size + $sph-inner + $checkbox-offset;
 }
